Add end of hour (59 minutes) option to Time Windows minute dropdowns
Previously, the minute dropdowns in Time Windows only offered 5-minute
increments (00, 05, 10, 15... 55), making it impossible to set end-of-day
times like 23:59. This made scheduling windows that end precisely at
midnight difficult.

Changes:
- Add "59 (End of Hour)" option to all 4 minute dropdown selects
- Applies to both start_time and end_time in edit mode
- Applies to both start_time and end_time in add new window form
- Users can now set times like 23:59 for end-of-day windows

This allows for more precise time window configurations, especially for
migration windows that should run until the end of the day.

--- a/index.html
+++ b/index.html
@@ -3847,6 +3847,7 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                                                 {minute.toString().padStart(2, '0')}
                                               </option>
                                             ))}
+                                            <option value="59">59 (End of Hour)</option>
                                           </select>
                                         </div>
                                       </div>
@@ -3897,6 +3898,7 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                                                 {minute.toString().padStart(2, '0')}
                                               </option>
                                             ))}
+                                            <option value="59">59 (End of Hour)</option>
                                           </select>
                                         </div>
                                       </div>
@@ -4131,6 +4133,7 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                                         {minute.toString().padStart(2, '0')}
                                       </option>
                                     ))}
+                                    <option value="59">59 (End of Hour)</option>
                                   </select>
                                 </div>
                               </div>
@@ -4167,6 +4170,7 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                                         {minute.toString().padStart(2, '0')}
                                       </option>
                                     ))}
+                                    <option value="59">59 (End of Hour)</option>
                                   </select>
                                 </div>
                               </div>
