--- a/index.html
+++ b/index.html
@@ -5064,7 +5064,7 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                             <div key={migration.id} className="text-sm bg-white dark:bg-gray-700 rounded p-2 border border-gray-200 dark:border-gray-600">
                               <div className="flex items-center justify-between">
                                 <div className="flex items-center gap-2 flex-1">
-                                  <span className="text-gray-900 dark:text-white font-medium">{migration.name}</span>
+                                  <span className="text-gray-900 dark:text-white font-medium">{migration.name} ({migration.vmid})</span>
                                   <span className="text-gray-500 dark:text-gray-400">→</span>
                                   <span className="text-gray-700 dark:text-gray-300">{migration.target_node}</span>
                                   {migration.dry_run && (
@@ -5114,6 +5114,15 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                                         </span>
                                       </>
                                     )}
+                                  </div>
+                                </div>
+                              )}
+                              {/* Error Message for Failed Migrations */}
+                              {migration.status === 'failed' && migration.error && (
+                                <div className="mt-2 p-2 bg-red-50 dark:bg-red-900/20 border border-red-200 dark:border-red-700 rounded flex items-start gap-2">
+                                  <XCircle size={14} className="text-red-600 dark:text-red-400 mt-0.5 shrink-0" />
+                                  <div className="text-xs text-red-800 dark:text-red-300 flex-1">
+                                    <span className="font-semibold">Error:</span> {migration.error}
                                   </div>
                                 </div>
                               )}
