--- a/index.html
+++ b/index.html
@@ -189,6 +189,10 @@ const ProxBalanceLogo = ({ size = 32 }) => (
           const [logLevel, setLogLevel] = useState('INFO');
           const [verboseLogging, setVerboseLogging] = useState(false);
 
+          // Automigrate logs
+          const [automigrateLogs, setAutomigrateLogs] = useState(null);
+          const [logRefreshTime, setLogRefreshTime] = useState(null);
+
           // Chart.js lazy loading
           const [chartJsLoaded, setChartJsLoaded] = useState(false);
           const [chartJsLoading, setChartJsLoading] = useState(false);
@@ -395,6 +399,14 @@ const ProxBalanceLogo = ({ size = 32 }) => (
             const interval = setInterval(() => {
               setCountdownTick(prev => prev + 1);
             }, 1000);
+            return () => clearInterval(interval);
+          }, []);
+
+          // Auto-refresh automation status every 10 seconds
+          useEffect(() => {
+            const interval = setInterval(() => {
+              fetchAutomationStatus();
+            }, 10000); // 10 seconds
             return () => clearInterval(interval);
           }, []);
 
@@ -3432,6 +3444,62 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                     </div>
                   </div>
                   */}
+
+                  {/* Migration Logs */}
+                  <div className="bg-white dark:bg-gray-800 rounded-lg shadow p-6 mb-6">
+                    <div className="flex items-center justify-between mb-4">
+                      <h2 className="text-xl font-bold text-gray-900 dark:text-white">Migration Logs</h2>
+                      <div className="flex items-center gap-2">
+                        <button
+                          onClick={async () => {
+                            try {
+                              const response = await fetch('/api/automigrate/logs?lines=500');
+                              const data = await response.json();
+                              if (data.success) {
+                                setAutomigrateLogs(data.logs);
+                                setLogRefreshTime(new Date().toLocaleTimeString());
+                              }
+                            } catch (error) {
+                              console.error('Error fetching logs:', error);
+                            }
+                          }}
+                          className="px-3 py-1.5 bg-blue-600 hover:bg-blue-700 text-white rounded text-sm font-medium flex items-center gap-2"
+                        >
+                          <RefreshCw size={14} />
+                          Refresh
+                        </button>
+                        <button
+                          onClick={() => {
+                            if (!automigrateLogs) return;
+                            const blob = new Blob([automigrateLogs], { type: 'text/plain' });
+                            const url = window.URL.createObjectURL(blob);
+                            const a = document.createElement('a');
+                            a.href = url;
+                            a.download = `automigrate-logs-${new Date().toISOString().split('T')[0]}.txt`;
+                            document.body.appendChild(a);
+                            a.click();
+                            document.body.removeChild(a);
+                            window.URL.revokeObjectURL(url);
+                          }}
+                          disabled={!automigrateLogs}
+                          className="px-3 py-1.5 bg-green-600 hover:bg-green-700 disabled:bg-gray-400 disabled:cursor-not-allowed text-white rounded text-sm font-medium flex items-center gap-2"
+                        >
+                          <Download size={14} />
+                          Download
+                        </button>
+                      </div>
+                    </div>
+                    {logRefreshTime && (
+                      <div className="text-xs text-gray-500 dark:text-gray-400 mb-2">
+                        Last updated: {logRefreshTime}
+                      </div>
+                    )}
+                    <div className="bg-gray-900 dark:bg-black rounded border border-gray-700 p-4 max-h-96 overflow-y-auto">
+                      <pre className="text-xs text-green-400 font-mono whitespace-pre-wrap">
+                        {automigrateLogs || 'Click "Refresh" to load logs...'}
+                      </pre>
+                    </div>
+                  </div>
 
                   {/* Time Windows (Unified) */}
                   <div className="bg-white dark:bg-gray-800 rounded-lg shadow p-6 mb-6">
