--- a/index.html
+++ b/index.html
@@ -1729,8 +1729,12 @@ const ProxBalanceLogo = ({ size = 32 }) => (
             }
           }, [collapsedSections.nodeStatus]);
 
-          // Removed automatic recommendation fetching to save AI resources
-          // useEffect(() => { if (data) fetchRecommendations(); }, [data, cpuThreshold, memThreshold, iowaitThreshold, maintenanceNodes]);
+          // Auto-fetch recommendations and threshold calculations when data or thresholds change
+          useEffect(() => {
+            if (data && !loadingRecommendations) {
+              fetchRecommendations();
+            }
+          }, [data, cpuThreshold, memThreshold, iowaitThreshold, maintenanceNodes]);
 
           // Render charts when data changes or chart period changes
           useEffect(() => {
@@ -5266,11 +5270,11 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                                 </div>
                               )}
                               {/* Error Message for Failed Migrations */}
-                              {migration.status === 'failed' && migration.error && (
+                              {migration.status === 'failed' && (
                                 <div className="mt-2 p-2 bg-red-50 dark:bg-red-900/20 border border-red-200 dark:border-red-700 rounded flex items-start gap-2">
                                   <XCircle size={14} className="text-red-600 dark:text-red-400 mt-0.5 shrink-0" />
                                   <div className="text-xs text-red-800 dark:text-red-300 flex-1">
-                                    <span className="font-semibold">Error:</span> {migration.error}
+                                    <span className="font-semibold">Error:</span> {migration.error || 'Migration failed (check logs for details)'}
                                   </div>
                                 </div>
                               )}
@@ -7139,29 +7143,37 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                     {!collapsedSections.recommendations && (
                       <div className="mb-4 p-4 bg-gray-50 dark:bg-gray-800/50 rounded-lg border border-gray-200 dark:border-gray-700">
                         <div className="flex items-center justify-between mb-3">
-                          <div className="flex items-center gap-3">
-                            <span className="text-sm font-medium text-gray-700 dark:text-gray-300">Threshold Mode:</span>
-                            <div className="flex items-center gap-2 bg-white dark:bg-gray-700 rounded-lg p-1 border border-gray-300 dark:border-gray-600">
-                              <button
-                                onClick={() => setThresholdMode('manual')}
-                                className={`px-3 py-1 text-sm font-medium rounded transition-all ${
-                                  thresholdMode === 'manual'
-                                    ? 'bg-blue-600 text-white'
-                                    : 'text-gray-600 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-600'
-                                }`}
-                              >
-                                Manual
-                              </button>
-                              <button
-                                onClick={() => setThresholdMode('auto')}
-                                className={`px-3 py-1 text-sm font-medium rounded transition-all ${
-                                  thresholdMode === 'auto'
-                                    ? 'bg-green-600 text-white'
-                                    : 'text-gray-600 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-600'
-                                }`}
-                              >
-                                Auto
-                              </button>
+                          <div className="flex flex-col gap-2">
+                            <div className="flex items-center gap-3">
+                              <span className="text-sm font-medium text-gray-700 dark:text-gray-300">Threshold Mode:</span>
+                              <div className="flex items-center gap-2 bg-white dark:bg-gray-700 rounded-lg p-1 border border-gray-300 dark:border-gray-600">
+                                <button
+                                  onClick={() => setThresholdMode('manual')}
+                                  className={`px-3 py-1 text-sm font-medium rounded transition-all ${
+                                    thresholdMode === 'manual'
+                                      ? 'bg-blue-600 text-white'
+                                      : 'text-gray-600 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-600'
+                                  }`}
+                                >
+                                  Manual
+                                </button>
+                                <button
+                                  onClick={() => setThresholdMode('auto')}
+                                  className={`px-3 py-1 text-sm font-medium rounded transition-all ${
+                                    thresholdMode === 'auto'
+                                      ? 'bg-green-600 text-white'
+                                      : 'text-gray-600 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-600'
+                                  }`}
+                                >
+                                  Auto
+                                </button>
+                              </div>
+                            </div>
+                            <div className="flex items-center gap-2 text-xs text-gray-600 dark:text-gray-400">
+                              <RefreshCw size={12} className="text-green-600 dark:text-green-400" />
+                              <span className="text-green-600 dark:text-green-400 font-medium">
+                                Auto-recalculates every {config?.ui_refresh_interval_minutes || 15} minutes
+                              </span>
                             </div>
                           </div>
                           {thresholdSuggestions && thresholdMode === 'manual' && (
